--- a/webScrapping/Untitled1.ipynb
+++ b/webScrapping/Untitled1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,16 +50,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 name  total_videos  average_videos_views  \\\n",
+      "0           philCohen             0                   NaN   \n",
+      "1      urvashirautela           306          1.702444e+06   \n",
+      "2  Danielle Bernstein             0                   NaN   \n",
+      "3                gaby             0                   NaN   \n",
+      "4         zaarayesmin             0                   NaN   \n",
+      "\n",
+      "   average_videos_comments  total_posts  average_post_comments  \\\n",
+      "0                      NaN          274             106.237226   \n",
+      "1              4595.986928          608            4223.912829   \n",
+      "2                      NaN          248             206.241935   \n",
+      "3                      NaN          271             113.166052   \n",
+      "4                      NaN          121             521.628099   \n",
+      "\n",
+      "   average_post_likes                                        description  \\\n",
+      "0        10113.905109    thepacman82 [ad]Intotheweekendwithheadtotoe ...   \n",
+      "1       595724.907895    urvashirautela Verified SohonouredtoplayCleo...   \n",
+      "2        25256.931452    weworewhat Verified OOTD•taptap 3h  weworewh...   \n",
+      "3         9753.066421    whatsgabycookin Verified Lastminutethanksgiv...   \n",
+      "4        33386.347107    zaarayesmin Verified Youweremycupoftea☕️butn...   \n",
+      "\n",
+      "                                        tagged_names country category  \n",
+      "0     @mango_man @mango_man @mango_man @mango_man...     USA  fashion  \n",
+      "1     @amatoofficial @furneamato   @tonykakkar   ...   india    actor  \n",
+      "2         @shopweworewhat   @daniellebernstein   ...     USA  fashion  \n",
+      "3       @capitalone @PayPal   @whatsthomaseating?...     USA     chef  \n",
+      "4                                                ...   india    actor  \n"
+     ]
+    }
+   ],
    "source": [
     "print(final[0:5])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -626,13 +660,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['USA' 'india' 'france' 'canada' 'iran' 'usa' 'germany' 'japan' 'china'\n",
-      " 'spain' 'italy' 'uk' 'korea' 'newzealand' 'inida' 'pakistan' 'brazil']\n"
+      "['fashion' 'actor' 'chef' 'singer/makeup' 'photography' 'singer' 'sports'\n",
+      " 'fashion/makeup']\n"
      ]
     }
    ],
    "source": [
-    "print(final['country'].unique())"
+    "print(final['category'].unique())"
    ]
   },
   {
